chore: make currency only settable on POST endpoint
