# myordersapi/src/Controller/OrderController.php
@@ -177,6 +177,7 @@ class OrderController extends AbstractController
             'orderNumber' => $order->getOrderNumber(),
             'orderDate'   => $order->getOrderDate()?->format('Y-m-d H:i:s'),
             'status' => $order->getStatus()?->value,
+            'currency'    => $order->getCurrency(),
             'orderLines'  => array_map(function($ol) {
                 return [
                     'id'         => $ol->getId(),
